# berry

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  berry-upgd-prompt.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: build_cat_assets.py
src/berry/: __init__.py  ai.py  checkin.py  cli.py  companion.py  config.py  daemon.py  launchd.py  notch.py  popup.py  reminders.py  render.py  state.py  streaks.py
tests/: test_ai.py  test_checkin.py  test_companion.py  test_config.py  test_notch.py  test_reminders.py  test_state.py  test_streak_gap.py  test_streaks.py
